fix: twemoji alignment

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -77,7 +77,6 @@
 		height: 1em !important;
 		width: 1em !important;
 		margin: 0 0.07em !important;
-		vertical-align: -0.1em !important;
 		background: none !important;
 		padding: 0 !important;
 		pointer-events: none;
